# Robotics-Project

./: README.md
gazebo_simulation/: CMakeLists.txt  package.xml
gazebo_simulation/launch/: Spawn_robot.py  robot_gazebo.launch.py  world_gazebo.launch.py
gazebo_simulation/urdf/: imu.xacro  material.xacro  robot.xacro  robot_body.xacro  robot_camera.xacro  robot_rplidar.xacro  robot_transmission.xacro
metric_calculation/: Clearance.py  Execution_time.py  Initialization_time.py  Local_Path_Performance.py  Navigate_to_pose.py  Path_Planning_Time.py  Path_length.py  Reactivity.py  Smoothness.py  Smoothness_Heading_Direction.py  Smoothness_Path.py  nav_to_pose.py
robot_nav2/: CMakeLists.txt  package.xml
robot_nav2/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  save_map.launch.py
robot_nav2/map/: test_map.yaml
robot_nav2/param/: amcl_params.yaml  nav_params.yaml  navigate_w_replanning.xml  robot_params.yaml
robot_nav2/script/: gotopose.py
robot_nav2/urdf/: simple_urdf_robot.urdf
robot_slam/robot_cartographer/: CMakeLists.txt  package.xml
robot_slam/robot_cartographer/launch/: cartographer.launch.py
robot_slam/robot_slam_toolbox/: CMakeLists.txt  package.xml
robot_slam/robot_slam_toolbox/launch/: online_async_launch.py  online_sync.launch.py
robot_slam/slam_gmapping/: package.xml
robot_slam/slam_gmapping/launch/: slam_gmapping.launch.py
